# AdvancedRoboticsLab

./: .gitignore  CMakelists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: robotics-ci.yml
LQG/: CMakeLists.txt  README.md
LQG/include/: lqg.hpp
LQG/src/: lqg.cpp  main.cpp
LQR/: CMakeLists.txt  README.md
LQR For Robot Stabilization/: CMakeLists.txt  README.md
LQR For Robot Stabilization/include/: lqr.hpp
LQR For Robot Stabilization/src/: main.cpp
LQR For Robot Stabilization/tests/: test_lqr.cpp
LQR/src/: lqr.cpp  main.cpp
LQR/tests/: test_lqr.cpp
MPC/: CMakeLists.txt  README.md
MPC/include/: mpc.hpp
MPC/src/: main.cpp  mpc.cpp
PID/: CMakeLists.txt  README.md
PID Controller for Robot Navigation/: CMakeLists.txt  README.md
PID Controller for Robot Navigation/include/: controller.hpp
PID Controller for Robot Navigation/src/: controller.cpp  main.cpp
PID Controller for Robot Navigation/tests/: test_pid.cpp
PID/src/: controller.cpp
PID/tests/: test_pid.cpp
RL/: Dockerfile
RL/src/rl_agent/: CMakeLists.txt  package.xml
RL/src/rl_environment/: CMakeLists.txt  package.xml
utils/: matplotlibcpp.h
